<resources>

    <string name="app_name">Galgotias University mSIM</string>
    <string name="univ_name">Galgotias University</string>
    <string name="app_name_short">GU mSIM</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="action_settings">Settings</string>

    <string name="version">v1.0</string>

    <string name="text_about">This app is created with lots of Love and Coffee. Please support the app by liking us on Play Store and sharing the app. Your Love matters a lot for the development of the app.</string>

    <string name="share_header">Share via:</string>
    <string name="share_subject">Galgotias University mSIM</string>
    <string name="share_text">Hey,\nCheckout this app for Galgotias University.\n\nhttps://play.google.com/store/apps/details?id=in.edu.galgotiasuniversity\n\nYou can check your attendance directly!\nAlso it has a Holiday Planner and many other awesome features.\nCheers :)</string>

    <string name="play_link">https://play.google.com/store/apps/details?id=in.edu.galgotiasuniversity</string>

    <string name="changelog_full_title">Change Log</string>
    <string name="changelog_title">What\'s New</string>
    <string name="changelog_ok_button">Cool</string>
    <string name="changelog_show_full">More</string>

    <string name="update_now">Update</string>
    <string name="remind_me_later">Dismiss</string>

    <string name="exit_snack_bar">Press again to exit</string>

    <string name="sync_failed">Sync failed</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="content_description_logo">Logo</string>
    <string name="love">Made with Love</string>

    <string name="login_text">Login</string>
    <string name="login_hint">Login ID</string>
    <string name="password_text">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="login_button">LOGIN</string>

    <string name="no_records">No records</string>
    <string name="no_internet">No internet!</string>

    <string name="captcha_hint">Captcha</string>
    <string name="captcha_submit_button">Submit</string>
    <string name="captcha_image_content_description">Captcha</string>

    <string name="fragment_button_fetch">FETCH</string>
    <string name="fragment_button_from_today">FROM: TODAY"</string>
    <string name="fragment_button_to_today">TO: TODAY</string>
    <string name="fragment_button_from">FROM:"</string>
    <string name="fragment_button_to">TO:</string>


    <string name="welcome_message">Bonjour!\n=)\nUse the hamburger icon ☰ on the top left corner to open the navigation drawer.</string>
    <string name="welcome">Welcome!</string>

    <string name="absent">ABSENT</string>
    <string name="present">PRESENT</string>
    <string name="library">LIBRARY</string>
    <string name="no_value">--</string>

    <string name="menu_home">Home</string>
    <string name="menu_date_wise">Attendance: Date-wise</string>
    <string name="menu_subject_wise">Attendance: Subject-wise</string>
    <string name="menu_month_wise">Attendance: Month-wise</string>
    <string name="menu_library">Library</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_jobs">Jobs</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_navigate">Navigate</string>
    <string name="menu_share">Share</string>
    <string name="menu_like">Like</string>
    <string name="menu_other">Other</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_whats_new">What\'s new</string>
    <string name="menu_about">About</string>

    <string name="error_toast">Aw, Snap! Please try again</string>
    <string name="offline">Offline!</string>
    <string name="loading">Loading…</string>
    <string name="no_data">No data available</string>
    <string name="balance">Balance</string>
    <string name="error_connecting">Error connecting to the server</string>
    <string name="error_title">Aw, Snap!</string>

    <string name="tip_good">TIP: Good going!</string>
    <string name="tip_alert">TIP: Attendance below 75%!</string>
    <string name="attendance">Attendance</string>

    <string name="first_sync">First sync may take a few minutes. Please be patient.</string>
    <string name="title_admission_number">Admission Number</string>

    <string name="date_format">dd/MM/yyyy</string>

    <string name="developer_email">dev.NiharikaRastogi@gmail.com</string>
    <string name="crash_email_subject">GU mSIM Crash Report</string>

    <string name="error_captcha_not_fetched">Captcha could not be loaded!\nPlease try again</string>
    <string name="homepage_doc_title">SIM</string>
    <string name="login_page_doc_title">SIM Login</string>

    <string name="required">Required!</string>
    <string name="min_required">At least 3 characters required!</string>

    <string name="due_date">Due Date</string>
    <string name="return_date">Return Date</string>
    <string name="fine">Fine</string>
    <string name="status">Status</string>

    <string name="welcome_toast">Welcome</string>
    <string name="welcome_back_toast">Welcome back</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="mobile">Mobile</string>
    <string name="dob">Date of Birth</string>
    <string name="gender">Gender</string>

    <string name="please_wait">Please wait</string>
    <string name="login_button_normal">Connect</string>
    <string name="login_button_loading">Connecting</string>
    <string name="login_button_complete">Connected</string>

    <string name="login_id_min_required">At least 6 characters required!</string>
    <string name="password_min_required">At least 3 characters required!</string>

    <string name="reconnecting">Reconnecting to the server…</string>
    <string name="error_timed_out">Oops! Connection timed out</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_tip">Tap the red pin to get driving directions</string>
    <string name="directions">Directions</string>

</resources>