<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:checked="true"
            android:icon="@drawable/ic_donut_large_white_48dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/date_wise"
            android:icon="@drawable/ic_today_white_48dp"
            android:title="@string/menu_date_wise" />
        <item
            android:id="@+id/subject_wise"
            android:icon="@drawable/ic_poll_white_48dp"
            android:title="@string/menu_subject_wise" />
        <item
            android:id="@+id/monthly"
            android:icon="@drawable/ic_poll_white_48dp"
            android:title="@string/menu_month_wise" />
        <!--<item-->
        <!--android:id="@+id/holiday_planner"-->
        <!--android:icon="@drawable/ic_star_white_48dp"-->
        <!--android:title="Holiday Planner" />-->
        <item
            android:id="@+id/library"
            android:icon="@drawable/ic_local_library_white_48dp"
            android:title="@string/menu_library" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_account_circle_white_48dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/jobs"
            android:icon="@drawable/ic_work_white_48dp"
            android:title="@string/menu_jobs" />
    </group>
    <item
        android:checkableBehavior="none"
        android:title="@string/menu_communicate">
        <menu>
            <!--<item
                android:id="@+id/ads"
                android:checkable="false"
                android:icon="@drawable/ic_thumb_up_white_48dp"
                android:title="Recommendations" />-->
            <item
                android:id="@+id/share"
                android:icon="@drawable/ic_share_white_48dp"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/like"
                android:icon="@drawable/ic_thumb_up_white_48dp"
                android:title="@string/menu_like" />
        </menu>
    </item>

    <item
        android:checkableBehavior="none"
        android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_power_settings_new_white_48dp"
                android:title="@string/menu_logout" />
            <!--<item
                android:icon="@drawable/ic_settings_white_48dp"
                android:title="Settings" />-->
            <item
                android:id="@+id/whats_new"
                android:icon="@drawable/ic_help_white_48dp"
                android:title="@string/menu_whats_new" />
            <item
                android:id="@+id/about"
                android:icon="@drawable/ic_info_white_48dp"
                android:title="@string/menu_about" />
        </menu>
    </item>
</menu>