<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/captchaImage"
        android:layout_width="@dimen/captcha_image_width"
        android:layout_height="@dimen/captcha_image_height"
        android:layout_gravity="center"
        android:contentDescription="@string/captcha_image_content_description"
        android:padding="@dimen/captcha_padding"
        android:scaleType="centerCrop" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/captchaTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/captcha_padding"
        android:paddingLeft="@dimen/captcha_padding"
        android:paddingRight="@dimen/captcha_padding">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/captchaText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/captcha_hint"
            android:inputType="textAutoComplete" />

    </android.support.design.widget.TextInputLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/captchaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/captcha_submit_button"
        android:text="@string/captcha_submit_button" />

</LinearLayout>