<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/contentCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginLeft="@dimen/main_activity_vertical_margin"
        android:layout_marginRight="@dimen/main_activity_vertical_margin"
        app:cardCornerRadius="@dimen/main_activity_card_radius"
        app:cardElevation="@dimen/main_activity_card_elevation"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/topMessageText1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:padding="@dimen/main_activity_padding"
                    android:text="@string/welcome_message"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/waveLoadingViewContainer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="32dp"
                android:layout_marginTop="32dp"
                android:visibility="visible">

                <dev.rg.WaveProgress.WaveLoadingView
                    android:id="@+id/waveLoadingView"
                    android:layout_width="@dimen/wlv_width"
                    android:layout_height="@dimen/wlv_height"
                    android:background="@drawable/circle"
                    app:wlv_borderColor="@color/primary_dark"
                    app:wlv_borderWidth="4dp"
                    app:wlv_progressValue="0"
                    app:wlv_shapeType="circle"
                    app:wlv_waveAmplitude="15"
                    app:wlv_waveColor="@color/primary_dark" />

                <TextView
                    android:id="@+id/waveProgressCenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:text="@string/welcome"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/waveProgressBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="52dp"
                    android:text="@string/love"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@color/white"
                    android:textStyle="italic"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/waveProgressAdditionalBottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:paddingBottom="28dp"
                    android:text=""
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="italic" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/dataContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:visibility="visible">

                <LinearLayout
                    android:id="@+id/subContainer1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center|top"
                        android:layout_marginEnd="@dimen/main_activity_margin"
                        android:layout_marginLeft="@dimen/main_activity_margin"
                        android:layout_marginRight="@dimen/main_activity_margin"
                        android:layout_marginStart="@dimen/main_activity_margin"
                        android:background="@color/red" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center|bottom"
                        android:lines="2"
                        android:padding="@dimen/main_activity_padding"
                        android:text="@string/absent"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/data1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="@dimen/main_activity_padding"
                        android:paddingLeft="@dimen/main_activity_padding"
                        android:paddingRight="@dimen/main_activity_padding"
                        android:text="@string/no_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/subContainer2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center|top"
                        android:layout_marginEnd="@dimen/main_activity_margin"
                        android:layout_marginLeft="@dimen/main_activity_margin"
                        android:layout_marginRight="@dimen/main_activity_margin"
                        android:layout_marginStart="@dimen/main_activity_margin"
                        android:background="@color/green" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center|bottom"
                        android:lines="2"
                        android:padding="@dimen/main_activity_padding"
                        android:text="@string/present"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/data2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="@dimen/main_activity_padding"
                        android:paddingLeft="@dimen/main_activity_padding"
                        android:paddingRight="@dimen/main_activity_padding"
                        android:text="@string/no_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/subContainer3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:layout_gravity="center|top"
                        android:layout_marginEnd="@dimen/main_activity_margin"
                        android:layout_marginLeft="@dimen/main_activity_margin"
                        android:layout_marginRight="@dimen/main_activity_margin"
                        android:layout_marginStart="@dimen/main_activity_margin"
                        android:background="@color/yellow" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center|bottom"
                        android:lines="2"
                        android:padding="@dimen/main_activity_padding"
                        android:text="@string/library"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textColor="@color/secondary_text" />

                    <TextView
                        android:id="@+id/data3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:paddingBottom="@dimen/main_activity_padding"
                        android:paddingLeft="@dimen/main_activity_padding"
                        android:paddingRight="@dimen/main_activity_padding"
                        android:text="@string/no_value"
                        android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.v4.widget.NestedScrollView>